# agent-foundation

./: AGENTS.md  pyproject.toml
app/: main.py
doc/: AI 学习计划.md
doc/01-week/: 01_第 1 周目标.md
doc/01-week/01_day/: 02_Anthropic Prompting Best Practices 学习笔记.md  03_Increase Consistency 学习笔记.md  04_Structured Outputs 学习笔记.md  05_Function Calling 学习笔记.md  06_Responses API Overview 学习笔记.md  07_Hugging Face LLM Course Chapter 1 学习笔记.md  08_FastAPI Request Body 学习笔记.md
